[project]
name = "pubmed-company-filter"
version = "0.1.0"
description = ""
authors = [
    {name = "roshinibanala",email = "roshinibanala0512@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "requests (==2.31.0)",
    "pandas (==2.2.3)",
    "lxml (==2.2.3)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
